--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         {
             title: "Mangá Black Clover Vol. 6",
             category: "Figures",
-            image: "https://m.media-amazon.com/images/I/912ChV2mLdL._SL1500_.jpg"
+            image: "https://m.media-amazon.com/images/I/912ChV2mLdL._SL1500_.jpg",
             link: "https://amzn.to/4tKe1Uv",
             desc: "Asta enfrenta Baro, o responsável pelo sequestro de várias crianças. A cientista mágica Sally o transformou em um monstro com poder mágico inesgotável, e Asta se vê em uma árdua batalha. Porém, tudo muda quando Gauche, que luta ao seu lado, descobre um novo poder!! A vitória parece garantida, mas...?!"
         },
@@ -285,7 +285,6 @@
             desc: "O Exame de Seleção dos Royal Knights enfim chega ao seu clímax! Quem sairá vencedor em meio às turbulentas lutas...? Conseguirão Asta e Yuno passar no exame e entrar para a tropa de elite?! Com os Royal Knights formados sob liderança do Rei e do Rei Mago, uma nova batalha almejando a extinção do “Olho do Sol da Meia-noite” tem início...!!"
 		},
 		{
-				{
             title: "Black Clover Vol. 16",
             category: "Mangás",
             image: "https://m.media-amazon.com/images/I/71ts6TBJzgL._SL1500_.jpg",
