--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             category: "Mangás",
             image: "https://m.media-amazon.com/images/I/91IOp9RvOxL._SL1500_.jpg",
             link: "https://amzn.to/4tQiTHZ",
-            desc: "Sob ordens do Rei Mago, Asta é enviado para uma perigosa Dungeon onde dormem Relíquias da Antiguidade. Lá, ele encontra seu grande amigo e rival, Yuno. Além disso, magos de um reino inimigo aparecem. Quem chegará primeiro às profundezas para encontrar a "Câmara dos Tesouros"?"
+            desc: "Sob ordens do Rei Mago, Asta é enviado para uma perigosa Dungeon onde dormem Relíquias da Antiguidade. Lá, ele encontra seu grande amigo e rival, Yuno. Além disso, magos de um reino inimigo aparecem. Quem chegará primeiro às profundezas para encontrar a Câmara dos Tesouros?"
         },
         {
             title: "Mangá Black Clover Vol. 3",
