--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             category: "Mangás",
             image: "https://m.media-amazon.com/images/I/915scUFphqL._SL1500_.jpg",
             link: "https://amzn.to/4rrgHoF",
-            desc: "O Exame de Seleção dos Royal Knights enfim chega ao seu clímax! Quem sairá vencedor em meio às turbulentas lutas...? Conseguirão Asta e Yuno passar no exame e entrar para a tropa de elite?! Com os Royal Knights formados sob liderança do Rei e do Rei Mago, uma nova batalha almejando a extinção do "Olho do Sol da Meia-noite" tem início...!!"
+            desc: "O Exame de Seleção dos Royal Knights enfim chega ao seu clímax! Quem sairá vencedor em meio às turbulentas lutas...? Conseguirão Asta e Yuno passar no exame e entrar para a tropa de elite?! Com os Royal Knights formados sob liderança do Rei e do Rei Mago, uma nova batalha almejando a extinção do Olho do Sol da Meia-noite tem início...!!"
         },
         {
             title: "Black Clover Vol. 16",
