--- a/index.html
+++ b/index.html
@@ -582,6 +582,76 @@
             image: "https://m.media-amazon.com/images/I/61T6qRhtMZL._AC_SL1124_.jpg",
             link: "https://amzn.to/46fdpwc",
             desc: "Zzzzzzzzzz",
+        },
+        {
+            title: "Black Clover Vol. 28",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/81cNIiuw1qL._SY466_.jpg",
+            link: "https://amzn.to/40fgCs3",
+            desc: "A tropa de elite do reino de Clover liderada por Nacht faz uma incursão no Reino Spade, onde o ritual de advento de Qliphoth segue num ritmo constante. Sua intenção é impedir o ritual ao lado da Resistência de Spade. Entretanto, há a sombra de um novo oponente poderoso junto da Dark Triad!!! Qual será o destino do mundo diante de uma maldade tão profunda que supera a imaginação?!"
+        },
+        {
+            title: "Black Clover Vol. 29",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/61QfJNfCIbL._SL1000_.jpg",
+            link: "https://amzn.to/40jj2py",
+            desc: "Asta tem sucesso em executar o Unite e lança um único golpe contra o demônio que se aproxima!!! Ao lado dos reforços, ele vai para o Reino Spade dando início à investida!!! Em outro lugar, Nacht confronta sozinho os demônios de nível mais alto, Lilith e Nahamah. Diante da força esmagadora desses dois, o vice-comandante se vê em um beco sem saída e desaparece. Qual será o passado desconhecido daquele que não perdoa o mal irracional?"
+        },
+        {
+            title: "Black Clover Vol. 30",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/613pamzTAjL._SL1000_.jpg",
+            link: "https://amzn.to/4cCa3XX",
+            desc: "Magna dividiu ao meio o poder mágico esmagador de Dante e levou a luta a uma simples troca de socos. Usando a sua determinação como arma, seu ímpeto turbulento tem início!!!E então, Noelle chega no local em que Charlotte e outros estão lutando e enfrenta Vanica com o novo poder que conseguiu. O que será da luta fatídica entre a família Silva, Vanica e Megicula?!"
+        },
+        {
+            title: "Black Clover Vol. 31",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/71h-UWHBziL._SL1000_.jpg",
+            link: "https://amzn.to/4tOdcKE",
+            desc: "Yuno e Langris conseguem contra-atacar Zenon, o último membro da Dark Triad, ao lutarem juntos, mas sofrem uma derrota esmagadora depois que seu oponente fica ainda mais poderoso… Quem será que aparece diante de Langris e seu parceiro no momento crucial…?! O passado de Zenon vem à tona, assim como a verdade desconhecida de Yuno. A luta da persistência entre os oponentes que correm em direções opostas finalmente chega ao fim!!!"
+        },
+        {
+            title: "Black Clover Vol. 32",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/51r-geW94wL._SL1000_.jpg",
+            link: "https://amzn.to/4b29WCT",
+            desc: "Os Touro Negros Selvagens tornam-se um só para salvar Yami. Eles atacam o núcleo do lado inimigo e têm sucesso graças ao Unite de Asta, mas Lucifero finalmente se manifesta…Diante de um poder esmagador que força tudo ao seu redor a se prostrar, não há nada que possa ser feito. Mas o contra-ataque tem início!!! Aumentem sua força conjunta e enfrentem o mais poderoso Rei Demônio!!!"
+        },
+        {
+            title: "Black Clover Vol. 33",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/61kMPgcajyL._SL1000_.jpg",
+            link: "https://amzn.to/4qPk0Vv",
+            desc: "Asta consegue realizar o verdadeiro Unite e precisa derrotar o rei dos demônios, o ser mais poderoso. Com o sentimento de Richita em seu peito, ele ergue sua espada, mas…?!Lucifero contra Asta!!! A luta destinada chega ao fim!!!Então, uma nova sombra se infiltra no reino de Clover… A história caminha para o seu arco final: aquele que será o rei mago mais poderoso!!"
+        },
+        {
+            title: "Black Clover Vol. 34",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/6122ntt2mGL._SL1000_.jpg",
+            link: "https://amzn.to/3MM9Tmp",
+            desc: "Asta é ferido mortalmente por Lucius. Quando ele acorda, percebe que está numa nação diferente: a Terra do Sol. Ele conhece o Ryuya, Shogun da Terra do Sol e é informado de que nunca será páreo para Lucius do jeito que está… Percebendo sua incompetência, Asta anuncia que vai derrotá-lo e dá início ao treinamento da nova técnica que precisa aprender: Zetten!!! Enquanto isso, o passado desconhecido de Yami vem à tona...?!Agora, o palco é a terra natal do comandante Yami: a Terra do Sol!!!"
+        },
+        {
+            title: "Black Clover Vol. 35",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/71uR3BnZYSL.jpg",
+            link: "https://amzn.to/40nrdkF",
+            desc: "Asta aparece no momento em que Ichika e os outros estão prestes a perder e entra no meio da luta contra os Paladinos com a nova técnica que adquiriu: Zetten!!! Será que ele vai conseguir salvar a irmã, que está sendo controlada por Lucius?!Então, o dia do julgamento finalmente se aproxima…Lucius invade o reino de Clover e é interceptado pelo poderio total dos Cavaleiros Mágicos, mas…A última luta definitiva, que vai influenciar o futuro da humanidade, abre suas cortinas!!"
+        },
+        {
+            title: "Black Clover Vol. 36",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/71rSh4dJVtL.jpg",
+            link: "https://amzn.to/3OnTVPV",
+            desc: "Em cada canto do reino de Clover, teve início uma batalha contra um paladino. Lucius planeja controlar tudo, mas Yuno vai pra cima dele num combate individual. Enquanto isso, os Touros Negros começam a maior magia combinada que existe: As Portas do Destino. Eles planejam trazer Asta de volta, mas Damnatio, agora transformado em paladino, se coloca no caminho deles! Diante da crise da destruição do mundo, será que Asta vai chegar a tempo?!"
+        },
+        {
+            title: "Black Clover Vol. 37",
+            category: "Continue de onde o anime parou!",
+            image: "https://m.media-amazon.com/images/I/71zU31C1qIL._SL1310_.jpg",
+            link: "https://amzn.to/4aTEojv",
+            desc: "O reino de Clover está prestes a ser destruído pelo impacto da magia absoluta de Lucius. As batalhas contra os paladinos se intensificam em todos os cantos e a Ordem dos Cavaleiros Mágicos reúne todas as suas forças para enfrentá-los. Então, com o suporte dos Touros Negros Selvagens, Asta e Yuno vão para o ponto mais longe no céu, onde Lucius se encontra, e uma luta feroz tem início!! A batalha final que definirá o futuro da humanidade chega ao seu ponto mais alto!!"
         }
     ];
 
