--- a/index.html
+++ b/index.html
@@ -708,6 +708,188 @@
             image: "https://down-cvs-br.img.susercontent.com/sg-11134201-822y2-mhw4xana2y9t19.webp",
             link: "https://s.shopee.com.br/gKqkv1W7P",
             desc: "Camiseta de Compressão Academia Dry-Fit Proteção Térmica UV"
+        },
+		{
+            title: "Camiseta Oversized Touros Negros",
+            category: "Camisetas",
+            image: "https://down-cvs-br.img.susercontent.com/br-11134207-81ztc-mj8vktdtyltv6e.webp",
+            link: "https://s.shopee.com.br/50TpvU0s9E",
+            desc: "Camiseta Oversized Black Clover Anime Skull"
+        },
+		{
+            title: "Camiseta Oversized Mereoleona",
+            category: "Camisetas",
+            image: "https://down-tx-br.img.susercontent.com/br-11134207-7r98o-m5snqn56mmr63f.webp",
+            link: "https://s.shopee.com.br/50TpvaTS8g",
+            desc: "Camiseta Oversized Mereoleona Anime Black Clover Mangá"
+        },
+		{
+            title: "Camisa Camiseta Asta Unisex",
+            category: "Camisetas",
+            image: "https://down-tx-br.img.susercontent.com/br-11134207-81z1k-mgi6hejujgg7be.webp",
+            link: "https://s.shopee.com.br/5L6gKVpEpn",
+            desc: "camiseta Anime Asta Black Clover Personalizada Unisex Adulto Infantil"
+        },
+		{
+            title: "Camiseta Asta Espadas",
+            category: "Camisetas",
+            image: "https://down-tx-br.img.susercontent.com/sg-11134201-8224u-mhpwiyy0q5u0b0.webp",
+            link: "https://s.shopee.com.br/60MN7sVjD1",
+            desc: "Algodão Penteado Unissex Streetwear Oversized"
+        },
+		{
+            title: "Chaveiro Yuno, Noelle, Yami, Magna...",
+            category: "Chaveiros",
+            image: "https://down-tx-br.img.susercontent.com/c6d279e5fc07f82570f158ea565ac5d5.webp",
+            link: "https://s.shopee.com.br/qeH3zL1St",
+            desc: "Chaveiros Lindos em 2d"
+        },
+		{
+            title: "Chaveiro Asta",
+            category: "Chaveiros",
+            image: "https://down-tx-br.img.susercontent.com/17b5a5a9c8939c0fe405fb6a55dd614d.webp",
+            link: "https://s.shopee.com.br/9AJOzRCKMk",
+            desc: " Chaveiro  dupla face tamanho 3,8 cm"
+        },
+		{
+            title: "CHAVEIRO FUNKO POP NOELLE",
+            category: "Chaveiros",
+            image: "https://down-tx-br.img.susercontent.com/br-11134201-23010-s1uv3311xkmve1.webp",
+            link: "https://s.shopee.com.br/1BH7St7wg1",
+            desc: "Já sabe né, eu sou da realeza!"
+        },
+		{
+            title: "Kit 3 chaveiros Asta, Noelle, Luck",
+            category: "Chaveiros",
+            image: "https://down-tx-br.img.susercontent.com/d1531836fde91e50b38c03d4c5a6c07a.webp",
+            link: "https://s.shopee.com.br/1VtxrchNSy",
+            desc: "Kit de 3 chaveiros de personagens de Black Clover: Asta, Noelle e Luck."
+        },
+		{
+            title: "FUNKO POP FUNKO YUNO",
+            category: "Chaveiros",
+            image: "https://down-tx-br.img.susercontent.com/br-11134207-7r98o-m0stldl5wtc1c6.webp",
+            link: "https://s.shopee.com.br/3LLc3AwQDT",
+            desc: "FUNKO POP KEYCHAIN BLACK CLOVER YUNO"
+        },
+		{
+            title: "Copo Acrílico Asta",
+            category: "COPOS",
+            image: "https://down-tx-br.img.susercontent.com/8c682f9c9f063031a9e317db6155c33f.webp",
+            link: "https://s.shopee.com.br/4fqzdmIVbz",
+            desc: "Parede dupla - conserva a temperatura do liquido em contato com a mão. Tampa de rosquear - evita respingos e desperdício."
+        },
+		{
+            title: "Copo Térmico/BLACK CLOVER",
+            category: "COPOS",
+            image: "https://down-tx-br.img.susercontent.com/br-11134207-7r98o-m8hs2nc489v522.webp",
+            link: "https://s.shopee.com.br/AABwC1gfRs",
+            desc: "360° Gravado A Laser"
+        },
+		{
+            title: "Copo ECO Bucks Asta ",
+            category: "COPOS",
+            image: "https://down-tx-br.img.susercontent.com/sg-11134201-23020-w4a7ohpia4nv05.webp",
+            link: "https://s.shopee.com.br/1gDO4UfnuK",
+            desc: "Copo ECO Bucks feito em material PP05 (plástico) material flexível (não é silicone) que não quebra ao cair ou bater."
+        },
+		{
+            title: "Copo Térmico Asta e Nero",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/24b4697db8d09a052eecf3ac7692a20a.webp",
+            link: "https://s.shopee.com.br/4LE9FXJQKz",
+            desc: "Copo ECO feito em material PP05 (plástico) material flexível (não é silicone) que não quebra ao cair ou bater."
+        },
+		{
+            title: "Caneca - Touros Negro",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-m8ceo3k65yxd8c.webp",
+            link: "https://s.shopee.com.br/AABwCR1R2j",
+            desc: "Você quer uma caneca exclusiva para usar no dia a dia ou presentear aquele amigo, irmão ou familiar apaixonado pelo universo Black Clover? Nossa caneca de porcelana é o item perfeito para fãs de Asta, Yuno, Noelle Silva e todos os membros do Reino do Clover!"
+        },
+		{
+            title: "Caneca - Yami Sukehiro",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-m4owra2gehc1dd.webp",
+            link: "https://s.shopee.com.br/9AJP0jk94Z",
+            desc: "Um lindo item de coleção para você usar ou colecionar."
+        },
+		{
+            title: "Caneca - Asta",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-81ztc-mj1ynbe1s2de19.webp",
+            link: "https://s.shopee.com.br/5q2x2kkGK1",
+            desc: "Linda caneca feita em porcelana resistente, ideal para uso no dia a dia, decoração ou para presentear!"
+        },
+		{
+            title: "Caneca - Fuegoleon Vermillion",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-m4otdpxgfgw18b.webp",
+            link: "https://s.shopee.com.br/7AYKdJKtiI",
+            desc: "Você apaixonado por anime encontrou sua caneca ideal para dar de presente a seu amigo, irmão, primo, filho OU VOCÊ MESMO."
+        },
+		{
+            title: "Caneca - Zora Ideale",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-m8man4d855o118.webp",
+            link: "https://s.shopee.com.br/9pZ5oLGJVt",
+            desc: "Você apaixonado por anime encontrou sua caneca ideal para dar de presente a seu amigo, irmão, primo, filho OU VOCÊ MESMO."
+        },
+		{
+            title: "Caneca - Black Clover",
+            category: "COPOS",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-m7wgg21fdssx18.webp",
+            link: "https://s.shopee.com.br/807Rd2usIF",
+            desc: "Você apaixonado por anime encontrou sua caneca ideal para dar de presente a seu amigo, irmão, primo, filho OU VOCÊ MESMO."
+        },
+		{
+            title: "Moletom - Asta e Yuno",
+            category: "Moletom",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-81z1k-mh3ejdohadj81a.webp",
+            link: "https://s.shopee.com.br/2LT4sjn5He",
+            desc: "MOLETOM FLANELADO"
+        },
+		{
+            title: "Moletom - Touros Negros",
+            category: "Moletom",
+            image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-lz6lj0joia0x94.webp",
+            link: "https://s.shopee.com.br/6AfnRt9nmQ",
+            desc: "Moletom Canguru"
+        },
+		{
+            title: "Moletom - Cosplay",
+            category: "Moletom",
+            image: "https://down-cvs-br.img.susercontent.com/sg-11134201-82631-mjsfntqrm8lic8.webp",
+            link: "https://s.shopee.com.br/3B2BsTVrQZ",
+            desc: "Moletom Cosplay"
+        },
+		{
+            title: "Moletom - Caveira Litch Demonio",
+            category: "Moletom",
+            image: "https://down-cvs-br.img.susercontent.com/br-11134207-7r98o-mci6dayy1df64a.webp",
+            link: "https://s.shopee.com.br/1gDO5oD9Hf",
+            desc: "Moletom Black Clover Gola"
+        },
+		{
+            title: "Moletom - Touros Negros",
+            category: "Moletom",
+            image: "https://down-cvs-br.img.susercontent.com/sg-11134201-824j3-mehffdjcqc5h8b.webp",
+            link: "https://s.shopee.com.br/1BH7UzHALp",
+            desc: "Moletom Black Clover"
+        },
+		{
+            title: "Moletom - Asta e Yuno",
+            category: "Moletom",
+            image: "https://down-cvs-br.img.susercontent.com/sg-11134201-7rd68-m6o78ejv0nex51.webp",
+            link: "https://s.shopee.com.br/3qHsfxRG9B",
+            desc: "Moletom Canguru"
+        },
+		{
+            title: "Moletom - Black clover"
+            category: "Moletom",
+            image: "https://down-cvs-br.img.susercontent.com/br-11134207-81ztc-mk1dqkwd0ttua6.webp",
+            link: "https://s.shopee.com.br/9KcpE8r6RQ",
+            desc: "Moletom Canguru"
         }
     ];
 
