--- a/index.html
+++ b/index.html
@@ -844,49 +844,49 @@
         },
 		{
             title: "Moletom - Asta e Yuno",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-bs-br.img.susercontent.com/br-11134207-81z1k-mh3ejdohadj81a.webp",
             link: "https://s.shopee.com.br/2LT4sjn5He",
             desc: "MOLETOM FLANELADO"
         },
 		{
             title: "Moletom - Touros Negros",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-bs-br.img.susercontent.com/br-11134207-7r98o-lz6lj0joia0x94.webp",
             link: "https://s.shopee.com.br/6AfnRt9nmQ",
             desc: "Moletom Canguru"
         },
 		{
             title: "Moletom - Cosplay",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-cvs-br.img.susercontent.com/sg-11134201-82631-mjsfntqrm8lic8.webp",
             link: "https://s.shopee.com.br/3B2BsTVrQZ",
             desc: "Moletom Cosplay"
         },
 		{
             title: "Moletom - Caveira Litch Demonio",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-cvs-br.img.susercontent.com/br-11134207-7r98o-mci6dayy1df64a.webp",
             link: "https://s.shopee.com.br/1gDO5oD9Hf",
             desc: "Moletom Black Clover Gola"
         },
 		{
             title: "Moletom - Touros Negros",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-cvs-br.img.susercontent.com/sg-11134201-824j3-mehffdjcqc5h8b.webp",
             link: "https://s.shopee.com.br/1BH7UzHALp",
             desc: "Moletom Black Clover"
         },
 		{
             title: "Moletom - Asta e Yuno",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-cvs-br.img.susercontent.com/sg-11134201-7rd68-m6o78ejv0nex51.webp",
             link: "https://s.shopee.com.br/3qHsfxRG9B",
             desc: "Moletom Canguru"
         },
 		{
             title: "Moletom - Black clover",
-            category: "Moletom",
+            category: "Moletons",
             image: "https://down-cvs-br.img.susercontent.com/br-11134207-81ztc-mk1dqkwd0ttua6.webp",
             link: "https://s.shopee.com.br/9KcpE8r6RQ",
             desc: "Moletom Canguru"
